fix: checks. grammar

--- a/tutorials/klusterai-api/hallucination-detection-agent.ipynb
+++ b/tutorials/klusterai-api/hallucination-detection-agent.ipynb
@@ -31,14 +31,13 @@
     "\n",
     "Hallucinations in AI occur when models generate information that appears plausible but is factually incorrect or unsupported by the provided context. This poses significant risks in production applications, particularly in domains where accuracy is critical.\n",
     "\n",
-    "This tutorial demonstrates how to use <a href=\"/get-started/hallucination-agent/starting-guide/\" target=\"_blank\">kluster.ai</a>'s Hallucination Detection Agent to identify and prevent hallucinations in your applications. We'll explore both detection methods: Question/Answer validation and Chat Completion analysis.\n",
+    "This tutorial demonstrates how to use <a href=\"/get-started/hallucination-agent/starting-guide/hallucination-detection-agent/\" target=\"_blank\">kluster.ai Hallucination Detection Agent</a> to identify and prevent hallucinations in your applications. We'll explore both detection methods: Question/Answer validation and Chat Completion analysis.\n",
     "\n",
     "The agent can evaluate AI responses based on provided context (perfect for RAG applications) or perform real-time fact-checking against general knowledge. By following this tutorial, you'll learn how to:\n",
     "\n",
     "- Detect hallucinations in individual Q&A pairs.\n",
-    "- Validate responses in full conversation histories.\n",
     "- Compare fact-checking vs. context validation modes.\n",
-    "- Analyze detection results and optimize for production use."
+    "- Validate responses in full conversation histories.\n"
    ]
   },
   {
@@ -112,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "bcc3d475-8f49-4fc4-9a5e-c6eb6866d2b5",
    "metadata": {
     "id": "bcc3d475-8f49-4fc4-9a5e-c6eb6866d2b5"
@@ -122,8 +121,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mWARNING: You are using pip version 21.2.4; however, version 25.1.1 is available.\n",
-      "You should consider upgrading via the '/Users/franzuzz/code/kluster-mkdocs/.venv/bin/python -m pip install --upgrade pip' command.\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -166,21 +163,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "44a6f805-1c74-48a5-8572-0a5fb2c48286",
    "metadata": {
     "id": "44a6f805-1c74-48a5-8572-0a5fb2c48286"
    },
    "outputs": [],
    "source": [
-    "base_url_dev_endpoint = \"https://api-r.klusterai.dev/v1/judges/detect-hallucination\"\n",
-    "base_url_dev = \"https://api-r.klusterai.dev/v1/judges/detect-hallucination\"\n",
+    "# Define the base URL for both methods\n",
+    "base_url_endpoint = \"https://api.kluster.ai/v1/judges/detect-hallucination\" #To test with HTTP requests\n",
+    "base_url= \"https://api.kluster.ai/v1\" # To test with OpenAI client\n",
     "\n",
     "# Set up the client\n",
     "client = OpenAI(\n",
-    "    base_url=base_url_dev,\n",
+    "    base_url=base_url_endpoint,\n",
     "    api_key=api_key,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63f0feda",
+   "metadata": {},
+   "source": [
+    "## Question/Answer\n",
+    "\n",
+    "We'll create diverse test cases to demonstrate the hallucination detection capabilities:\n",
+    "\n",
+    "1. **Fact-checking examples** - general knowledge questions where the agent verifies against external sources.\n",
+    "2. **Context validation examples** - scenarios where responses must align with provided context.\n",
+    "3. **Search results demonstration** – see how enabling `return_search_results` provides sources used for fact-checking, helping you understand and trust the agent's decisions.\n",
+    "4. **Invoice extraction example** - a practical use case for document processing.\n",
+    "5. **Chat completions example** - use the convenient OpenAI SDK to check for hallucinations."
    ]
   },
   {
@@ -190,22 +204,7 @@
     "id": "fb8c5014-5b0c-43c2-a238-073dbde2d90a"
    },
    "source": [
-    "## Prepare Q/A data\n",
-    "\n",
-    "We'll create diverse test cases to demonstrate the hallucination detection capabilities:\n",
-    "\n",
-    "1. **Fact-checking examples** - general knowledge questions where the agent verifies against external sources.\n",
-    "2. **Context validation examples** - rAG-style scenarios where responses must align with provided context.\n",
-    "3. **Search results demonstration** – see how enabling `return_search_results` provides sources used for fact-checking, helping you understand and trust the agent's decisions.\n",
-    "4. **Invoice extraction example** - a practical use case for document processing."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a110f9c3",
-   "metadata": {},
-   "source": [
-    "### Fact-checking examples"
+    "### Prepare Q/A data\n"
    ]
   },
   {
@@ -235,14 +234,6 @@
     "        \"expected_hallucination\": True\n",
     "    }\n",
     "]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2b0f9188",
-   "metadata": {},
-   "source": [
-    "### Context validation examples"
    ]
   },
   {
@@ -276,21 +267,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ebefac4-cb4c-4e75-af96-c827b5668188",
-   "metadata": {
-    "id": "8ebefac4-cb4c-4e75-af96-c827b5668188"
-   },
-   "source": [
-    "## Question/Answer"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "QMXyZoDINlBC",
    "metadata": {
     "id": "QMXyZoDINlBC"
    },
    "source": [
+    "### Q/A Features\n",
+    "\n",
     "The Question/Answer method validates whether an answer to a specific question contains hallucinated information. It operates in two modes:\n",
     "\n",
     "1. **Fact-checking mode** - when no context is provided, the agent verifies answers by comparing it to other sources.\n",
@@ -301,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "f4903010-b32f-47d0-9a01-6be8e0938328",
    "metadata": {
     "id": "f4903010-b32f-47d0-9a01-6be8e0938328"
@@ -311,7 +294,7 @@
     "# Function that runs the detection for fact-checking examples \n",
     "def detect_hallucination_qa(prompt, output, context=None, return_search_results=False):\n",
     "    \"\"\"Detect hallucination using the dedicated endpoint\"\"\"\n",
-    "    url = base_url_dev_endpoint\n",
+    "    url = base_url_endpoint\n",
     "    headers = {\n",
     "        \"Authorization\": f\"Bearer {api_key}\",\n",
     "        \"Content-Type\": \"application/json\"\n",
@@ -436,7 +419,7 @@
    "source": [
     "### Enable search results\n",
     "\n",
-    "When enabling the poperty `return_search_results=true` the agent will return the sources used for the fact-checking."
+    "When enabling the property `return_search_results=true`, the agent will return the sources used for the fact-checking."
    ]
   },
   {
@@ -1071,12 +1054,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "69d0cbdf",
+   "metadata": {},
+   "source": [
+    "## Chat completion\n",
+    "\n",
+    "The Chat Completion method validates multi-turn conversations for hallucinations. This is ideal for conversational AI systems and chatbots."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0a03d805-0d59-42ce-ac2a-4f9beacd639b",
    "metadata": {
     "id": "0a03d805-0d59-42ce-ac2a-4f9beacd639b"
    },
    "source": [
-    "## Prepare chat conversation data"
+    "### Prepare chat data"
    ]
   },
   {
@@ -1111,17 +1104,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69d0cbdf",
+   "id": "b33486bb",
    "metadata": {},
    "source": [
-    "### Chat \n",
-    "\n",
-    "The Chat Completion method validates multi-turn conversations for hallucinations. This is ideal for conversational AI systems and chatbots."
+    "### Use OpenAI Client"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "72e169bc",
    "metadata": {},
    "outputs": [],
@@ -1132,7 +1123,7 @@
     "    \n",
     "    # Create a separate client for chat completions with the correct base URL\n",
     "    client = OpenAI(\n",
-    "        base_url=\"https://api-r.klusterai.dev/v1/\",\n",
+    "        base_url=base_url,\n",
     "        api_key=api_key,\n",
     "    )\n",
     "    \n",
@@ -1247,12 +1238,14 @@
    "source": [
     "## Summary\n",
     "\n",
-    "This tutorial demonstrated how to use kluster.ai's Hallucination Detection Agent to identify and prevent AI hallucinations. Key takeaways:\n",
+    "This tutorial demonstrated how to use the kluster.ai Hallucination Detection Agent to identify and prevent AI hallucinations. \n",
     "\n",
-    "- **Two detection methods**: Q/A for individual responses, Chat Completion for conversations\n",
-    "- **Two operation modes**: Fact-checking against general knowledge and context based\n",
-    "- **Detailed explanations**: The agent provides clear reasoning for its determinations\n",
-    "- **Transparent fact-checking**: When `return_search_results` is enabled, the agent provides a list of sources used for verification. This helps users understand the basis for each hallucination decision and increases trust in the results."
+    "**Key takeaways:**\n",
+    "\n",
+    "- **Two detection methods** - Q/A for individual responses, Chat Completion for conversations\n",
+    "- **Two operation modes** - fact-checking against general knowledge and context based\n",
+    "- **Detailed explanations** - the agent provides clear reasoning for its determinations\n",
+    "- **Transparent fact-checking** - when `return_search_results` is enabled, the agent provides a list of sources used for verification. This helps users understand the basis for each hallucination decision and increases trust in the results"
    ]
   }
  ],
