--- a/tutorials/klusterai-api/effective-prompt-engineering.ipynb
+++ b/tutorials/klusterai-api/effective-prompt-engineering.ipynb
@@ -25,6 +25,16 @@
    ]
   },
   {
+  "cell_type": "markdown",
+  "id": "video-link-cell",
+  "metadata": {
+    "id": "video-link-cell"
+  },
+  "source": [
+    "You can watch a video walkthrough of this tutorial on [YouTube](https://www.youtube.com/watch?v=esQyxt5NKPQ)."
+  ]
+  },
+  {
    "cell_type": "markdown",
    "id": "934b46ad",
    "metadata": {},
