--- a/tutorials/klusterai-api/image-analysis.ipynb
+++ b/tutorials/klusterai-api/image-analysis.ipynb
@@ -39,6 +39,23 @@
     "You can adapt this example by using your own images or requests. With this approach, you can effortlessly process images of any scale, big or small, and obtain image analysis powered by a state-of-the-art language model."
    ]
   },
+    {
+  "cell_type": "markdown",
+  "id": "video-demo-cell",
+  "metadata": {
+    "id": "video-demo-cell"
+  },
+  "source": [
+    "\n",
+    "For a video version of this tutorial, see the YouTube video below.\n",
+    "\n",
+    "<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style>\n",
+    "<div class=\"embed-container\">\n",
+    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/nXj8aVPPjtQ?si=hstve0QlHV6RinDa\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>\n",
+    "</div>\n",
+    "<style>.caption { font-family: Open Sans, sans-serif; font-size: 0.9em; color: rgba(170, 170, 170, 1); font-style: italic; letter-spacing: 0px; position: relative;}</style>"
+  ]
+  },
   {
    "cell_type": "markdown",
    "id": "41ea62a1",
