fix: typos, styles, rules

--- a/tutorials/klusterai-api/reliability-check.ipynb
+++ b/tutorials/klusterai-api/reliability-check.ipynb
@@ -57,10 +57,13 @@
     "id": "83111fd4"
    },
    "source": [
-    "Before getting started, ensure you have the following:\n",
+    "  Before getting started, ensure you have the following:\n",
     "\n",
-    "- **A kluster.ai account** - sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> if you don't have one\n",
-    "- **A kluster.ai API key** - after signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a href=\"/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide"
+    "  - **A kluster.ai account**: sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai\n",
+    "  platform</a> if you don't have one\n",
+    "  - **A kluster.ai API key**: after signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" \n",
+    "  target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a \n",
+    "  href=\"/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide"
    ]
   },
   {
@@ -186,15 +189,16 @@
    "id": "63f0feda",
    "metadata": {},
    "source": [
-    "## Question/Answer\n",
+    "  ## Question/Answer\n",
     "\n",
-    "We'll create diverse test cases to demonstrate the reliability check capabilities:\n",
+    "  We'll create diverse test cases to demonstrate the reliability check capabilities:\n",
     "\n",
-    "1. **General knowledge verification examples** - questions where the service verifies against external sources.\n",
-    "2. **Context validation examples** - scenarios where responses must align with provided context.\n",
-    "3. **Search results demonstration** – see how enabling `return_search_results` provides sources used for verification, helping you understand and trust the service's decisions.\n",
-    "4. **Invoice extraction example** - a practical use case for document processing.\n",
-    "5. **Chat completions example** - use the convenient OpenAI SDK to check for reliability issues."
+    "  1. **General knowledge verification examples**: questions where the service verifies against external sources.\n",
+    "  2. **Context validation examples**: scenarios where responses must align with provided context.\n",
+    "  3. **Search results demonstration**: see how enabling `return_search_results` provides sources used for verification,\n",
+    "  helping you understand and trust the service's decisions.\n",
+    "  4. **Invoice extraction example**: a practical use case for document processing.\n",
+    "  5. **Chat completions example**: use the convenient OpenAI SDK to check for reliability issues."
    ]
   },
   {
@@ -269,14 +273,16 @@
     "id": "QMXyZoDINlBC"
    },
    "source": [
-    "### Q/A Features\n",
+    "  ### Q/A Features\n",
     "\n",
-    "The Question/Answer method validates whether an answer to a specific question contains unreliable or incorrect information. It operates in two modes:\n",
+    "  The Question/Answer method validates whether an answer to a specific question contains unreliable or incorrect\n",
+    "  information. It operates in two modes:\n",
     "\n",
-    "1. **General knowledge verification** - when no context is provided, the service verifies answers by comparing it to other sources.\n",
-    "2. **Context validation mode** - when context is provided, the service only validates answers against that context.\n",
+    "  1. **General knowledge verification**: when no context is provided, the service verifies answers by comparing it to\n",
+    "  other sources.\n",
+    "  2. **Context validation mode**: when context is provided, the service only validates answers against that context.\n",
     "\n",
-    "Let's start with general knowledge verification examples using the dedicated endpoint:"
+    "  Let's start with general knowledge verification examples using the dedicated endpoint:"
    ]
   },
   {
@@ -1201,16 +1207,18 @@
     "id": "b3cd0c42-2386-490c-b8bb-263c50e1b66b"
    },
    "source": [
-    "## Summary\n",
+    "  ## Summary\n",
     "\n",
-    "This tutorial demonstrated how to use the kluster.ai Verify service to identify and prevent reliability issues in AI outputs. \n",
+    "  This tutorial demonstrated how to use the kluster.ai Verify service to identify and prevent reliability issues in AI\n",
+    "  outputs.\n",
     "\n",
-    "**Key takeaways:**\n",
+    "  **Key takeaways:**\n",
     "\n",
-    "- **Two check methods** - Q/A for individual responses, Chat Completion for conversations\n",
-    "- **Two operation modes** - general knowledge verification and context-based validation\n",
-    "- **Detailed explanations** - the service provides clear reasoning for its determinations\n",
-    "- **Transparent verification** - when `return_search_results` is enabled, the service provides a list of sources used for verification. This helps users understand the basis for each reliability decision and increases trust in the results"
+    "  - **Two check methods**: Q/A for individual responses, Chat Completion for conversations\n",
+    "  - **Two operation modes**: general knowledge verification and context-based validation\n",
+    "  - **Detailed explanations**: the service provides clear reasoning for its determinations\n",
+    "  - **Transparent verification**: when `return_search_results` is enabled, the service provides a list of sources used for\n",
+    "   verification. This helps users understand the basis for each reliability decision and increases trust in the results\n"
    ]
   }
  ],
