--- a/tutorials/klusterai-api/reliability-check.ipynb
+++ b/tutorials/klusterai-api/reliability-check.ipynb
@@ -1244,7 +1244,7 @@
     "\n",
     "Some key takeaways:\n",
     "\n",
-    "  - **Two reliability check methods**: A verify API for Q/A verifications, and a chat completions endpoint for conversations.\n",
+    "  - **Two reliability check methods**: A Verify API for Q/A verifications, and a chat completions endpoint for conversations.\n",
     "  - **Two operation modes**: General knowledge verification and context-based validation.\n",
     "  - **Detailed explanations**: The service provides clear reasoning for its determinations.\n",
     "  - **Transparent verification**: With `return_search_results` enabled, the service provides a list of sources used for\n",
