--- a/tutorials/klusterai-api/reliability-check.ipynb
+++ b/tutorials/klusterai-api/reliability-check.ipynb
@@ -196,7 +196,7 @@
    "id": "63f0feda",
    "metadata": {},
    "source": [
-    "## Dedicated reliability endpoint\n",
+    "## Dedicated Verify API\n",
     "\n",
     "The reliability check via the Verify API validates whether an answer to a specific question contains unreliable or incorrect\n",
     "information. It operates in two modes:\n",
