Rename Verify API pages / content (#127)
* update reliability tutorial

* add

* rev

* rev

* Update get-started/verify/reliability/verify-api.md

Co-authored-by: albertov19 <64150856+albertov19@users.noreply.github.com>

* Update get-started/verify/reliability/workflow-integrations.md

Co-authored-by: albertov19 <64150856+albertov19@users.noreply.github.com>

* Update tutorials/klusterai-api/reliability-check.ipynb

Co-authored-by: albertov19 <64150856+albertov19@users.noreply.github.com>

* llms

* additions

* llms

* llms

* additions

---------

Co-authored-by: albertov19 <64150856+albertov19@users.noreply.github.com>

--- a/tutorials/klusterai-api/reliability-check.ipynb
+++ b/tutorials/klusterai-api/reliability-check.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "Reliability issues in AI occur when models generate information that appears plausible but is unreliable or unsupported by the provided context. This poses significant risks in production applications, particularly in domains where accuracy is critical.\n",
     "\n",
-    "This tutorial demonstrates how to use <a href=\"/get-started/verify/reliability/overview/\" target=\"_blank\">Verify</a> to identify and prevent reliability issues in your applications. We'll explore available methods: a dedicated API endpoint and via the OpenAI compatible chat completions endpoint.\n",
+    "This tutorial demonstrates how to use <a href=\"/get-started/verify/reliability/overview/\" target=\"_blank\">Verify</a> to identify and prevent reliability issues in your applications. We'll explore available methods: a dedicated API endpoint and via chat completions.\n",
     "\n",
     "The service can evaluate AI responses based on provided context (perfect for RAG applications) or perform real-time verification against general knowledge. By following this tutorial, you'll learn how to:\n",
     "\n",
@@ -196,9 +196,9 @@
    "id": "63f0feda",
    "metadata": {},
    "source": [
-    "## Dedicated reliability endpoint\n",
+    "## Dedicated Verify API\n",
     "\n",
-    "The reliability check dedicated endpoint validates whether an answer to a specific question contains unreliable or incorrect\n",
+    "The reliability check via the Verify API validates whether an answer to a specific question contains unreliable or incorrect\n",
     "information. It operates in two modes:\n",
     "\n",
     "  1. **General knowledge verification**: when no context is provided, the service verifies answers by comparing it to\n",
@@ -226,7 +226,7 @@
    "source": [
     "# Function that runs the reliability check for general knowledge examples \n",
     "def check_reliability_qa(prompt, output, context=None, return_search_results=False):\n",
-    "    \"\"\"Check reliability using the dedicated endpoint\"\"\"\n",
+    "    \"\"\"Check reliability using the Verify API\"\"\"\n",
     "    url = base_url_endpoint\n",
     "    headers = {\n",
     "        \"Authorization\": f\"Bearer {api_key}\",\n",
@@ -1073,9 +1073,9 @@
    "id": "69d0cbdf",
    "metadata": {},
    "source": [
-    "## OpenAI chat completion endpoint\n",
+    "## Chat completions endpoint\n",
     "\n",
-    "The reliability check conducted via the OpenAI chat completion endpoint method validates multi-turn conversations for reliability issues. This is ideal for conversational AI systems and chatbots."
+    "The reliability check conducted via the chat completions method validates multi-turn conversations for reliability issues. This is ideal for conversational AI systems and chatbots."
    ]
   },
   {
@@ -1125,7 +1125,7 @@
    "id": "b33486bb",
    "metadata": {},
    "source": [
-    "### Reliability check via the OpenAI client"
+    "### Reliability check via chat completions"
    ]
   },
   {
@@ -1240,11 +1240,11 @@
     "\n",
     "This tutorial demonstrated how to use the reliability check feature of the Verify service to identify and prevent reliability issues in AI outputs.\n",
     "\n",
-    "In this particular example, we used the dedicated reliability endpoint and the OpenAI-compatible method via the chat completions endpoint.\n",
+    "In this particular example, we used the Verify API and the chat completions endpoint.\n",
     "\n",
     "Some key takeaways:\n",
     "\n",
-    "  - **Two reliability check methods**: A dedicated endpoint for Q/A verifications, and the OpenAI-compatible chat completion endpoint for conversations.\n",
+    "  - **Two reliability check methods**: A Verify API for Q/A verifications, and a chat completions endpoint for conversations.\n",
     "  - **Two operation modes**: General knowledge verification and context-based validation.\n",
     "  - **Detailed explanations**: The service provides clear reasoning for its determinations.\n",
     "  - **Transparent verification**: With `return_search_results` enabled, the service provides a list of sources used for\n",
