--- a/tutorials/klusterai-api/effective-prompt-engineering.ipynb
+++ b/tutorials/klusterai-api/effective-prompt-engineering.ipynb
@@ -1,6 +1,6 @@
 {
  "cells": [
-   {
+  {
    "cell_type": "markdown",
    "id": "intro-heading",
    "metadata": {},
@@ -21,18 +21,18 @@
     "\n",
     "Using a simple retail dataset with sales, pricing, and profit data, you’ll see how adding structure, context, and business‑specific details transforms basic observations into strategic recommendations.\n",
     "\n",
-    "By the end, you’ll be equipped to apply these principles to your own business data using any of the [supported models](https://docs.kluster.ai/api-reference/reference/#list-supported-models) available through the [kluster.ai](https://kluster.ai/) API—unlocking deeper, more valuable insights.\n"
+    "By the end, you’ll be equipped to apply these principles to your own business data using any of the [supported models](https://docs.kluster.ai/get-started/models/) available through the [kluster.ai](https://kluster.ai/) API—unlocking deeper, more valuable insights.\n"
    ]
   },
   {
-  "cell_type": "markdown",
-  "id": "video-link-cell",
-  "metadata": {
+   "cell_type": "markdown",
+   "id": "video-link-cell",
+   "metadata": {
     "id": "video-link-cell"
-  },
-  "source": [
+   },
+   "source": [
     "You can watch a video walkthrough of this tutorial on [YouTube](https://www.youtube.com/watch?v=esQyxt5NKPQ)."
-  ]
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter your kluster.ai API key:  ········\n"
