--- a/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
+++ b/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
@@ -37,14 +37,14 @@
     "\n",
     "By following along, you'll discover how to leverage kluster.ai's powerful platform to create a custom model that boosts accuracy for financial text analysis and beyond."
    ]
-  }, 
-  {
-  "cell_type": "markdown",
-  "id": "video-demo-cell",
-  "metadata": {
-    "id": "video-demo-cell"
   },
-  "source": [
+  {
+   "cell_type": "markdown",
+   "id": "video-demo-cell",
+   "metadata": {
+    "id": "video-demo-cell"
+   },
+   "source": [
     "\n",
     "For a video version of this tutorial, see the YouTube video below.\n",
     "\n",
@@ -53,7 +53,7 @@
     "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/k5ziNToxPz8?si=6Ye4VWzhnarArAJu\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>\n",
     "</div>\n",
     "<style>.caption { font-family: Open Sans, sans-serif; font-size: 0.9em; color: rgba(170, 170, 170, 1); font-style: italic; letter-spacing: 0px; position: relative;}</style>"
-  ]
+   ]
   },
   {
    "cell_type": "markdown",
@@ -398,7 +398,7 @@
     "\n",
     "This example uses `klusterai/Meta-Llama-3.1-8B-Instruct-Turbo` as the model to fine-tune. We will later compare the fine-tuned model against the larger `klusterai/Meta-Llama-3.3-70B-Instruct-Turbo` model to see how it performs.\n",
     "\n",
-    "Please refer to the <a href=\"/get-started/models/\" target=\"_blank\">Supported models</a> section for a list of the models we support for fine-tuning.\n",
+    "Please refer to the [supported models](https://docs.kluster.ai/get-started/models/) section for a list of the models we support for fine-tuning.\n",
     "\n",
     "The following snippets prepare the JSONL file, where each line represents a different training data point."
    ]
@@ -556,9 +556,9 @@
    "source": [
     "### Start the fine-tuning \n",
     "\n",
-    "Once the fine-tuning file has been successfully uploaded, we're ready to start the fine-tuning job by providing the file ID we got in the previous step. To do so, we use the `fine_tuning.jobs.create` method, for which we also need to provide the model to fine-tune (check the <a href=\"/get-started/models/\" target=\"_blank\">Supported models</a> section). \n",
+    "Once the fine-tuning file has been successfully uploaded, we're ready to start the fine-tuning job by providing the file ID we got in the previous step. To do so, we use the `fine_tuning.jobs.create` method, for which we also need to provide the model to fine-tune (check the [supported models](https://docs.kluster.ai/get-started/models/) section). \n",
     "\n",
-    "Optionally, you can also provide an object containing the <a href=\"/api-reference/reference/#create-a-fine-tuning-job\" target=\"_blank\">hyperparameters for fine-tuning</a>, such as number of epochs, batch size, and learning rate, to adjust training time and potential performance gains. Remember that increasing the number of epochs will lead to longer training time but may result in higher performance. If you're unsure which hyperparameters to set, you can also comment them to accept the default values."
+    "Optionally, you can also provide an object containing the [hyperparameters for fine-tuning](https://docs.kluster.ai/api-reference/reference/#/http/api-endpoints/fine-tuning/v1-fine-tuning-jobs-post), such as number of epochs, batch size, and learning rate, to adjust training time and potential performance gains. Remember that increasing the number of epochs will lead to longer training time but may result in higher performance. If you're unsure which hyperparameters to set, you can also comment them to accept the default values."
    ]
   },
   {
