--- a/tutorials/klusterai-api/integrating-tools.ipynb
+++ b/tutorials/klusterai-api/integrating-tools.ipynb
@@ -71,7 +71,7 @@
    },
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter your kluster.ai API key:  ········\n"
@@ -161,7 +161,7 @@
     "\n",
     "This example selects the `klusterai/Meta-Llama-3.1-8B-Instruct-Turbo` model. If you'd like to use a different model, feel free to change it by modifying the model field. Remember to use the full length model name to avoid errors.\n",
     "\n",
-    "Please refer to the [Supported models](https://docs.kluster.ai/get-started/models/) section for a list of the models we support."
+    "Please refer to the [supported models](https://docs.kluster.ai/get-started/models/) section for a list of the models we support."
    ]
   },
   {
