--- a/tutorials/klusterai-api/rag.ipynb
+++ b/tutorials/klusterai-api/rag.ipynb
@@ -16,12 +16,12 @@
     "There are use cases when models struggle to complete tasks due to lack of specialized knowledge. This could lead to issues like hallucinations where models generate incorrect or fabricated information.\n",
     "To help mitigate this, **Retrieval-Augmented Generation (RAG)** allows the model to pull real-time data from specified sources.\n",
     "\n",
-    "This tutorial demonstrates how to use the <a href=\"https://docs.kluster.ai/api-reference/reference/#create-embeddings\">embeddings endpoint</a> in a RAG pipeline with PDF document support using <a href=\"https://docs.llamaindex.ai/en/stable/module_guides/models/embeddings/\" target=\"_blank\">LlamaIndex</a> to handle the data and retrieval. \n",
+    "This tutorial demonstrates how to use the <a href=\"https://docs.kluster.ai/api-reference/reference/#create-embeddings\" target=\"_blank\">embeddings endpoint</a> in a RAG pipeline with PDF document support using <a href=\"https://docs.llamaindex.ai/en/stable/module_guides/models/embeddings/\" target=\"_blank\">LlamaIndex</a> to handle the data and retrieval. \n",
     "\n",
     "\n",
     "**Models:**\n",
     "- **Embeddings**: Leveraging the <a href=\"https://platform.kluster.ai/models\" target=\"_blank\">BAAI/bge-m3</a> model.\n",
-    "- **Language Model (LLM) for Querying**: Utilizing the <a href=\"https://platform.kluster.ai/playground?model=meta-llama/Llama-4-Maverick-17B-128E-Instruct-FP8\" target=\"_blank\">meta-llama/Llama-4-Maverick-17B-128E-Instruct-FP8</a> model.\n"
+    "- **Language Model (LLM) for Querying**: Utilizing the <a href=\"https://platform.kluster.ai/playground?model=meta-llama/Llama-4-Maverick-17B-128E-Instruct-FP8\" target=\"_blank\">meta-llama/Llama-4-Maverick-17B-128E-Instruct-FP8</a> model."
    ]
   },
   {
@@ -33,8 +33,8 @@
     "\n",
     "Before getting started, ensure you have the following:\n",
     "\n",
-    "- **A kluster.ai account** - sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> if you don't have one\n",
-    "- **A kluster.ai API key** - after signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a href=\"https://docs.kluster.ai/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide"
+    "- **A kluster.ai account** - sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> if you don't have one.\n",
+    "- **A kluster.ai API key** - after signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a href=\"/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide."
    ]
   },
   {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "89313886",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "f3cfcc54",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
     "\n",
     "Think of embeddings as coordinates in a high-dimensional space, where similar meanings are placed closer together which allows RAG systems to measure how related different pieces of text are, making it easier to find relevant information quickly.\n",
     "\n",
-    "This section demonstrates how to **generate embeddings** directly using the BAAI/bge-m3 model and the end result."
+    "This section demonstrates how to **generate embeddings** directly using the `BAAI/bge-m3` model and the end result."
    ]
   },
   {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "ca0e710d",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
       "Model used: BAAI/bge-m3\n",
       "Embedding dimensions: 1024\n",
       "\n",
-      "First 10 dimensions of the embedding vector:\n",
+      "First ten dimensions of the embedding vector:\n",
       "[0.054107666015625, 0.01416778564453125, -0.0236663818359375, 0.039306640625, -0.039337158203125, 0.0098724365234375, -0.013946533203125, 0.037872314453125, -0.057281494140625, 0.01058197021484375]\n",
       "\n",
       "Token usage: 29 tokens\n"
@@ -147,7 +147,7 @@
     }
    ],
    "source": [
-    "# Generate embedding for the example text about Paris\n",
+    "# Generate embedding for the example text about Buenos Aires\n",
     "sample_text = \"The capital of Argentina is Buenos Aires. It is known for its tango music and dance, as well as its vibrant nightlife.\"\n",
     "\n",
     "response = client.embeddings.create(\n",
@@ -156,11 +156,11 @@
     "    encoding_format=\"float\"\n",
     ")\n",
     "\n",
-    "# Print the first 10 dimensions of the embedding vector\n",
+    "# Print the first ten dimensions of the embedding vector\n",
     "print(f\"Sample text: '{sample_text}'\")\n",
     "print(f\"Model used: {response.model}\")\n",
     "print(f\"Embedding dimensions: {len(response.data[0].embedding)}\")\n",
-    "print(\"\\nFirst 10 dimensions of the embedding vector:\")\n",
+    "print(\"\\nFirst ten dimensions of the embedding vector:\")\n",
     "print(response.data[0].embedding[:10])\n",
     "\n",
     "# Show token usage information\n",
@@ -169,12 +169,186 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5l5ebx93nza",
+   "metadata": {},
+   "source": [
+    "### Batch embeddings\n",
+    "\n",
+    "When building RAG systems, you often need to process multiple documents or text chunks. Instead of making individual API calls for each piece of text, batch embeddings allow you to process multiple texts in a single request, significantly improving efficiency and reducing latency.\n",
+    "\n",
+    "The embeddings endpoint accepts an array of strings, processing up to 2048 individual text inputs in one call."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "k7derk0u5w",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of texts processed: 5\n",
+      "Number of embeddings returned: 5\n",
+      "Total tokens used: 64\n",
+      "\n",
+      "Text 1: 'The capital of Argentina is Buenos Aires....'\n",
+      "Embedding dimensions: 1024\n",
+      "First five values: [0.037200927734375, 0.022430419921875, -0.032928466796875, 0.0226593017578125, -0.046539306640625]\n",
+      "\n",
+      "Text 2: 'Paris is known for the Eiffel Tower and its romant...'\n",
+      "Embedding dimensions: 1024\n",
+      "First five values: [-0.0014429092407226562, 0.0240478515625, -0.0137481689453125, 0.04278564453125, -0.0023708343505859375]\n",
+      "\n",
+      "Text 3: 'Tokyo is the most populous metropolitan area in th...'\n",
+      "Embedding dimensions: 1024\n",
+      "First five values: [-0.0001596212387084961, 0.0217742919921875, -0.0133056640625, 0.0304412841796875, 0.00852203369140625]\n",
+      "\n",
+      "Text 4: 'London has a rich history dating back to Roman tim...'\n",
+      "Embedding dimensions: 1024\n",
+      "First five values: [-0.0438232421875, 0.03497314453125, -0.021148681640625, 0.0021762847900390625, -0.01172637939453125]\n",
+      "\n",
+      "Text 5: 'New York City is often called the Big Apple....'\n",
+      "Embedding dimensions: 1024\n",
+      "First five values: [0.0038509368896484375, 0.03302001953125, -0.06243896484375, 0.0157318115234375, -0.0172882080078125]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example: Processing multiple texts in a single batch\n",
+    "batch_texts = [\n",
+    "    \"The capital of Argentina is Buenos Aires.\",\n",
+    "    \"Paris is known for the Eiffel Tower and its romantic atmosphere.\",\n",
+    "    \"Tokyo is the most populous metropolitan area in the world.\",\n",
+    "    \"London has a rich history dating back to Roman times.\",\n",
+    "    \"New York City is often called the Big Apple.\"\n",
+    "]\n",
+    "\n",
+    "# Generate embeddings for all texts in one API call\n",
+    "batch_response = client.embeddings.create(\n",
+    "    model=\"BAAI/bge-m3\",\n",
+    "    input=batch_texts,\n",
+    "    encoding_format=\"float\"\n",
+    ")\n",
+    "\n",
+    "print(f\"Number of texts processed: {len(batch_texts)}\")\n",
+    "print(f\"Number of embeddings returned: {len(batch_response.data)}\")\n",
+    "print(f\"Total tokens used: {batch_response.usage.prompt_tokens}\")\n",
+    "\n",
+    "# Verify the embeddings are returned in the same order\n",
+    "for i, text in enumerate(batch_texts):\n",
+    "    print(f\"\\nText {i+1}: '{text[:50]}...'\")\n",
+    "    print(f\"Embedding dimensions: {len(batch_response.data[i].embedding)}\")\n",
+    "    print(f\"First five values: {batch_response.data[i].embedding[:5]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ziqmmbsg1oj",
+   "metadata": {},
+   "source": [
+    "### Performance comparison: Single vs Batch\n",
+    "\n",
+    "To demonstrate the practical benefits of batch processing, let's compare the performance of individual API calls versus kluster.ai's batch processing using the same set of texts. This comparison will show the time savings and efficiency gains you can expect when implementing batch embeddings in production systems."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0otvoy0s56ap",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Method 1: Individual API calls\n",
+      "Time taken: 2.81 seconds\n",
+      "Number of API calls: 5\n",
+      "\n",
+      "Method 2: Batch API call\n",
+      "Time taken: 0.76 seconds\n",
+      "Number of API calls: 1\n",
+      "\n",
+      "Batch processing is approximately 3.7x faster!\n",
+      "Time saved: 2.05 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "# Test texts for performance comparison\n",
+    "test_texts = [\n",
+    "    \"Machine learning is transforming industries.\",\n",
+    "    \"Natural language processing enables computers to understand human language.\",\n",
+    "    \"Deep learning models require significant computational resources.\",\n",
+    "    \"Transfer learning allows models to apply knowledge from one domain to another.\",\n",
+    "    \"Embeddings capture semantic meaning in numerical form.\"\n",
+    "]\n",
+    "\n",
+    "# Method 1: Individual API calls (not recommended for production)\n",
+    "print(\"Method 1: Individual API calls\")\n",
+    "start_time = time.time()\n",
+    "individual_embeddings = []\n",
+    "\n",
+    "for text in test_texts:\n",
+    "    response = client.embeddings.create(\n",
+    "        model=\"BAAI/bge-m3\",\n",
+    "        input=text,\n",
+    "        encoding_format=\"float\"\n",
+    "    )\n",
+    "    individual_embeddings.append(response.data[0].embedding)\n",
+    "\n",
+    "individual_time = time.time() - start_time\n",
+    "print(f\"Time taken: {individual_time:.2f} seconds\")\n",
+    "print(f\"Number of API calls: {len(test_texts)}\")\n",
+    "\n",
+    "# Method 2: Batch API call (recommended)\n",
+    "print(\"\\nMethod 2: Batch API call\")\n",
+    "start_time = time.time()\n",
+    "\n",
+    "batch_response = client.embeddings.create(\n",
+    "    model=\"BAAI/bge-m3\",\n",
+    "    input=test_texts,\n",
+    "    encoding_format=\"float\"\n",
+    ")\n",
+    "\n",
+    "batch_time = time.time() - start_time\n",
+    "print(f\"Time taken: {batch_time:.2f} seconds\")\n",
+    "print(f\"Number of API calls: 1\")\n",
+    "\n",
+    "# Performance improvement\n",
+    "improvement = (individual_time / batch_time)\n",
+    "print(f\"\\nBatch processing is approximately {improvement:.1f}x faster!\")\n",
+    "print(f\"Time saved: {individual_time - batch_time:.2f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0szgjthcbzkd",
+   "metadata": {},
+   "source": [
+    "In practice, when building RAG systems with frameworks like LlamaIndex, the embedding batching is often handled automatically. Let's see how this works when we process PDF documents."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "91011ad2",
    "metadata": {},
    "source": [
-    "## Convert a PDF file into embeddings\n",
+    "## Building a RAG System with PDF Documents\n",
     "\n",
-    "You can convert any document into embeddings. "
+    "Now that we understand how embeddings work, let's build a complete RAG system using a real PDF document. This section demonstrates how to:\n",
+    "\n",
+    "- Download and load a PDF document\n",
+    "- Split the document into manageable chunks\n",
+    "- Convert those chunks into embeddings using kluster.ai\n",
+    "- Create a searchable knowledge base\n",
+    "- Query the system to retrieve relevant information\n",
+    "\n",
+    "We'll use a research paper about polar bears as our knowledge source, showing how RAG can help answer specific questions about document content that wouldn't be in the LLM's training data."
    ]
   },
   {
@@ -276,11 +450,11 @@
     "\n",
     "To address this, the document needs to be divided into smaller pieces called chunks. <a href=\"https://docs.llamaindex.ai/en/stable/\" target=\"_blank\">LlamaIndex</a> provides an efficient way to accomplish this.\n",
     "\n",
-    "- **LLM** - the model responsible for generating the responses from the knowledge base.\n",
-    "- **Embedding model** - the model used to convert text into vectors (embeddings), enabling semantic similarity searches.\n",
-    "- **Chunking parameters** - defines how documents are split into smaller chunks (nodes) for indexing:\n",
-    "    - `chunk_size` - the size of each chunk (in tokens).\n",
-    "    - `chunk_overlap` -  the number of tokens overlapping between consecutive chunks.\n",
+    "- **LLM**: the model responsible for generating the responses from the knowledge base.\n",
+    "- **Embedding model**: the model used to convert text into vectors (embeddings), enabling semantic similarity searches.\n",
+    "- **Chunking parameters**: defines how documents are split into smaller chunks (nodes) for indexing:\n",
+    "    - `chunk_size`: the size of each chunk (in tokens).\n",
+    "    - `chunk_overlap`: the number of tokens overlapping between consecutive chunks.\n",
     "\n",
     "To set up with **kluster.ai**, configure `OpenAILike` for the LLM and `OpenAILikeEmbedding` for the embedding model."
    ]
@@ -337,7 +511,7 @@
     "\n",
     "`VectorStoreIndex.from_documents(documents)` takes the PDF and internally breaks these documents into smaller text chunks (Nodes) using settings like `chunk_size` defined earlier. \n",
     " \n",
-    "Next, it converts each chunk into embeddings using the pre-configured embedding model. \n",
+    "Next, it converts each chunk into embeddings using the pre-configured embedding model. **LlamaIndex automatically batches these embedding requests** for efficiency, similar to what we demonstrated above.\n",
     "\n",
     "Finally, it stores these chunks and their embeddings in an in-memory vector store, making the index object ready for efficient similarity searches.\n",
     "\n",
@@ -430,15 +604,15 @@
    "id": "8f48f95e",
    "metadata": {},
    "source": [
-    "## Test your RAG\n",
+    "## Test the RAG\n",
     "\n",
     "Now that the RAG system is configured, test it with a query about the PDF document. This demonstration shows how a single RAG query processes:\n",
     "\n",
-    "1. **Query processing** - your question is converted into an embedding vector\n",
-    "2. **Chunk retrieval** - the system finds the most relevant document chunks using similarity search\n",
-    "3. **Response generation** - the LLM uses the retrieved chunks as context to answer your question\n",
+    "1. **Query processing**: the question is converted into an embedding vector.\n",
+    "2. **Chunk retrieval**: the system finds the most relevant document chunks using similarity search.\n",
+    "3. **Response generation**: the LLM uses the retrieved chunks as context to answer the question.\n",
     "\n",
-    "The following example includes detailed output showing the retrieved chunks and their similarity scores, helping you understand how the RAG system selects relevant information from your knowledge base."
+    "The following example includes detailed output showing the retrieved chunks and their similarity scores, helping understand how the RAG system selects relevant information from the knowledge base."
    ]
   },
   {
@@ -636,20 +810,16 @@
     "\n",
     "This notebook demonstrated a RAG system using LlamaIndex and kluster.ai that incorporates a PDF document as a knowledge source. Key takeaways include:\n",
     "\n",
-    "1. **Embeddings functionality** - generated and visualized embeddings using the BAAI/bge-m3 model.\n",
-    "2. **PDF integration** - loaded and processed a research paper for the knowledge base.\n",
-    "3. **RAG vs. Direct LLM comparison** - compared responses from the RAG system to direct LLM outputs.\n",
-    "\n",
-    "**Key Observations:**\n",
-    "\n",
-    "- RAG responses include specific information from the PDF that may not be in the LLM's training data.\n",
-    "- For queries about details in the paper, RAG provides more precise and accurate answers.\n",
-    "- RAG helps ground the model's responses in the actual content of the document rather than relying on the model's pre-trained knowledge.\n",
+    "1. **Embeddings functionality**: Generated and visualized embeddings using the BAAI/bge-m3 model.\n",
+    "2. **Batch processing benefits**: Demonstrated how batch embeddings provide significant performance improvements.\n",
+    "3. **PDF integration**: Loaded and processed a research paper for the knowledge base, with LlamaIndex handling embedding batching automatically.\n",
+    "4. **RAG vs. Direct LLM comparison**: Compared responses from the RAG system to direct LLM outputs.\n",
     "\n",
     "**Next Steps:**\n",
     "\n",
-    "- Try with your own PDFs or other document types.\n",
-    "- Experiment with different chunking strategies to optimize retrieval."
+    "- Try with different PDF documents or document types.\n",
+    "- Experiment with different chunking strategies to optimize retrieval.\n",
+    "- Explore other embedding models available on kluster.ai."
    ]
   }
  ],
