refer to dedicated deployments

--- a/tutorials/klusterai-api/image-analysis.ipynb
+++ b/tutorials/klusterai-api/image-analysis.ipynb
@@ -39,13 +39,13 @@
     "You can adapt this example by using your own images or requests. With this approach, you can effortlessly process images of any scale, big or small, and obtain image analysis powered by a state-of-the-art language model."
    ]
   },
-    {
-  "cell_type": "markdown",
-  "id": "video-demo-cell",
-  "metadata": {
+  {
+   "cell_type": "markdown",
+   "id": "video-demo-cell",
+   "metadata": {
     "id": "video-demo-cell"
-  },
-  "source": [
+   },
+   "source": [
     "\n",
     "For a video version of this tutorial, see the YouTube video below.\n",
     "\n",
@@ -54,7 +54,7 @@
     "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/nXj8aVPPjtQ?si=hstve0QlHV6RinDa\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>\n",
     "</div>\n",
     "<style>.caption { font-family: Open Sans, sans-serif; font-size: 0.9em; color: rgba(170, 170, 170, 1); font-style: italic; letter-spacing: 0px; position: relative;}</style>"
-  ]
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter your kluster.ai API key:  ········\n"
@@ -322,7 +322,7 @@
    "source": [
     "This example uses two models more oriented to image vision/analysis: `google/gemma-3-27b-it`, `Qwen/Qwen2.5-VL-7B-Instruct`, `meta-llama/Llama-4-Maverick-17B-128E-Instruct-FP8` and `meta-llama/Llama-4-Scout-17B-16E-Instruct`. Other models might not support providing images.\n",
     "\n",
-    "In addition, please refer to the <a href=\"/get-started/models/#model-comparison-table\" target=\"_blank\">Supported models</a> section for a list of the models we support.\n",
+    "In addition, please refer to the <a href=\"/get-started/models/#model-comparison-table\" target=\"_blank\">Supported models</a> section for a list of the models we support. You can also launch your own [dedicated deployment](https://docs.kluster.ai/get-started/dedicated-deployments/) to reserve private hardware and benefit from predictable per-minute billing and zero token costs.  \n",
     "\n",
     "The following snippets prepare the JSONL file, where each line represents a different request. Note that each separate batch request can have its own model. Also, we are using a temperature of `0.5` but feel free to change it and play around with the different outcomes.\n"
    ]
