fix: addresing all comments

--- a/tutorials/klusterai-api/rag.ipynb
+++ b/tutorials/klusterai-api/rag.ipynb
@@ -359,7 +359,7 @@
     "### Download document\n",
     "For this exercise, this tutorial uses a large PDF file, but you can adapt this to your needs.\n",
     "\n",
-    "The files used will serve as the LLM's **knowledge base**. \n",
+    "The files used will serve as the LLM's knowledge base. \n",
     "\n",
     "Download the PDF and store it in the `sample_pdfs` directory."
    ]
@@ -808,12 +808,12 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "This notebook demonstrated a RAG system using LlamaIndex and kluster.ai that incorporates a PDF document as a knowledge source. Key takeaways include:\n",
+    "This notebook demonstrated a RAG system using LlamaIndex and kluster.ai, incorpoating a PDF document as a knowledge source. Key takeaways include:\n",
     "\n",
-    "1. **Embeddings functionality**: Generated and visualized embeddings using the BAAI/bge-m3 model.\n",
-    "2. **Batch processing benefits**: Demonstrated how batch embeddings provide significant performance improvements.\n",
-    "3. **PDF integration**: Loaded and processed a research paper for the knowledge base, with LlamaIndex handling embedding batching automatically.\n",
-    "4. **RAG vs. Direct LLM comparison**: Compared responses from the RAG system to direct LLM outputs.\n",
+    "1. **Embeddings functionality**: Generated and visualized embeddings using the BAAI/bge-m3 model\n",
+    "2. **Batch processing benefits**: Demonstrated how batch embeddings provide significant performance improvements\n",
+    "3. **PDF integration**: Loaded and processed a research paper for the knowledge base, with LlamaIndex handling embedding batching automatically\n",
+    "4. **RAG vs. Direct LLM comparison**: Compared responses from the RAG system to direct LLM outputs\n",
     "\n",
     "**Next Steps:**\n",
     "\n",
