--- a/tutorials/klusterai-api/reliability-check.ipynb
+++ b/tutorials/klusterai-api/reliability-check.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "This tutorial demonstrates how to use <a href=\"/get-started/verify/reliability/overview/\" target=\"_blank\">Verify</a> to identify and prevent reliability issues in your applications. We'll explore available methods: a dedicated API endpoint and via chat completions.\n",
     "\n",
-    "The service can evaluate AI responses based on provided context (perfect for RAG applications) or perform real-time verification against general knowledge. By following this tutorial, you'll learn how to:\n",
+    "The service can evaluate AI responses based on the provided context (perfect for RAG applications) or perform real-time verification against general knowledge. By following this tutorial, you'll learn how to:\n",
     "\n",
     "- Verify reliability in individual Q&A pairs.\n",
     "- Compare general knowledge verification vs. context validation modes.\n",
@@ -59,11 +59,11 @@
    "source": [
     "  Before getting started, ensure you have the following:\n",
     "\n",
-    "  - **A kluster.ai account**: sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai\n",
-    "  platform</a> if you don't have one\n",
-    "  - **A kluster.ai API key**: after signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" \n",
+    "  - **A kluster.ai account**: Sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai\n",
+    "  platform</a> if you don't have one.\n",
+    "  - **A kluster.ai API key**: After signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" \n",
     "  target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a \n",
-    "  href=\"/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide"
+    "  href=\"/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide."
    ]
   },
   {
@@ -99,7 +99,7 @@
    },
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter your kluster.ai API key:  ········\n"
@@ -168,7 +168,7 @@
    "id": "48edba4e-7219-484a-a15d-134d6b09855f",
    "metadata": {},
    "source": [
-    "And then, initialize the `client` by pointing it to the kluster.ai endpoint, and passing your API key."
+    "Then, initialize the `client` by pointing it to the kluster.ai endpoint and passing your API key."
    ]
   },
   {
@@ -201,18 +201,18 @@
     "The reliability check via the Verify API validates whether an answer to a specific question contains unreliable or incorrect\n",
     "information. It operates in two modes:\n",
     "\n",
-    "  1. **General knowledge verification**: when no context is provided, the service verifies answers by comparing it to\n",
+    "  1. **General knowledge verification**: When no context is provided, the service verifies answers by comparing them to\n",
     "  other sources.\n",
-    "  2. **Context validation mode**: when context is provided, the service only validates answers against that context.\n",
+    "  2. **Context validation mode**: When context is provided, the service only validates answers against that context.\n",
     "\n",
     "For our example, we'll create diverse test cases to demonstrate the reliability check capabilities:\n",
     "\n",
-    "  1. **General knowledge verification examples**: questions where the service verifies against external sources.\n",
-    "  2. **Context validation examples**: scenarios where responses must align with provided context.\n",
-    "  3. **Search results demonstration**: see how enabling `return_search_results` provides sources used for verification,\n",
+    "  1. **General knowledge verification examples**: Questions where the service verifies against external sources.\n",
+    "  2. **Context validation examples**: Scenarios where responses must align with the provided context.\n",
+    "  3. **Search results demonstration**: See how enabling `return_search_results` provides sources used for verification,\n",
     "  helping you understand and trust the service's decisions.\n",
-    "  4. **Invoice extraction example**: a practical use case for document processing.\n",
-    "  5. **Chat completions example**: use the convenient OpenAI SDK to check for reliability issues.\n",
+    "  4. **Invoice extraction example**: A practical use case for document processing.\n",
+    "  5. **Chat completions example**: Use the convenient OpenAI SDK to check for reliability issues.\n",
     "\n",
     "To call the endpoint, we'll use the following function:"
    ]
@@ -258,7 +258,7 @@
    "source": [
     "### Prepare the data\n",
     "\n",
-    "In all scenarios, a `prompt` and `output` most be provided. The `prompt` is the message/question from the user, and the `output` is the answer from the Model. In addition, we are also providing the ground truth in regards to hallucination."
+    "In all scenarios, both a `prompt` and an `output` must be provided. The `prompt` is the message/question from the user, and the `output` is the answer from the Model. In addition, we are also providing the ground truth regarding hallucination."
    ]
   },
   {
@@ -332,7 +332,7 @@
    "source": [
     "### General knowledge verification\n",
     "\n",
-    "Let's test general knowledge verification mode with our examples:"
+    "Let's test the general knowledge verification mode with our examples:"
    ]
   },
   {
@@ -1087,7 +1087,7 @@
    "source": [
     "### Prepare the data\n",
     "\n",
-    "For this scenario, we need to provide the promp via the `user` role, and the answer from the LLM via the `assistant` role. We set `expected_unreliable` as the ground truth for comparison."
+    "For this scenario, we need to provide the prompt via the `user` role and the answer from the LLM via the `assistant` role. We set `expected_unreliable` as the ground truth for comparison."
    ]
   },
   {
@@ -1244,7 +1244,7 @@
     "\n",
     "Some key takeaways:\n",
     "\n",
-    "  - **Two reliability check methods**: A Verify API for Q/A verifications, and a chat completions endpoint for conversations.\n",
+    "  - **Two reliability check methods**: A Verify API for Q/A verifications and a chat completions endpoint for conversations.\n",
     "  - **Two operation modes**: General knowledge verification and context-based validation.\n",
     "  - **Detailed explanations**: The service provides clear reasoning for its determinations.\n",
     "  - **Transparent verification**: With `return_search_results` enabled, the service provides a list of sources used for\n",
