Apply suggestions from code review
Co-authored-by: Kevin Neilson <kevin@papermoon.io>

--- a/tutorials/klusterai-api/rag.ipynb
+++ b/tutorials/klusterai-api/rag.ipynb
@@ -16,7 +16,7 @@
     "There are use cases when models struggle to complete tasks due to lack of specialized knowledge. This could lead to issues like hallucinations where models generate incorrect or fabricated information.\n",
     "To help mitigate this, **Retrieval-Augmented Generation (RAG)** allows the model to pull real-time data from specified sources.\n",
     "\n",
-    "This tutorial demonstrates how to use the <a href=\"https://docs.kluster.ai/api-reference/reference/#create-embeddings\" target=\"_blank\">embeddings endpoint</a> in a RAG pipeline with PDF document support using <a href=\"https://docs.llamaindex.ai/en/stable/module_guides/models/embeddings/\" target=\"_blank\">LlamaIndex</a> to handle the data and retrieval. \n",
+    "This tutorial demonstrates how to use the <a href=\"https://docs.kluster.ai/api-reference/reference/#/http/api-endpoints/embeddings/v1-embeddings-post\" target=\"_blank\">embeddings endpoint</a> in a RAG pipeline with PDF document support using <a href=\"https://docs.llamaindex.ai/en/stable/module_guides/models/embeddings/\" target=\"_blank\">LlamaIndex</a> to handle the data and retrieval. \n",
     "\n",
     "\n",
     "**Models:**\n",
@@ -699,7 +699,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Query: Fact check this: <quote> The NWT suggested caution regarding a proposal that polar bear hides be transportable to the U.S. on CITES permits. It was suggested that whalebone carvings and seal-skin products be considered first and then if there are no political problems, possibly consider polar bears.</quote> **Important: if you dont the answer just replay 'SORRY, I DONT KNOW' without any other text.** If you do have data to answer, provide full answer quoting the sources\n",
+      "Query: Fact check this: <quote> The NWT suggested caution regarding a proposal that polar bear hides be transportable to the U.S. on CITES permits. It was suggested that whalebone carvings and seal-skin products be considered first and then if there are no political problems, possibly consider polar bears.</quote> **Important: if you dont the answer just reply 'SORRY, I DONT KNOW' without any other text.** If you do have data to answer, provide full answer quoting the sources\n",
       "\n",
       "--- Direct LLM Response (without RAG) ---\n",
       "SORRY, I DONT KNOW\n",
@@ -808,7 +808,7 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "This notebook demonstrated a RAG system using LlamaIndex and kluster.ai, incorpoating a PDF document as a knowledge source. Key takeaways include:\n",
+    "This notebook demonstrated a RAG system using LlamaIndex and kluster.ai, incorporating a PDF document as a knowledge source. Key takeaways include:\n",
     "\n",
     "1. **Embeddings functionality**: Generated and visualized embeddings using the BAAI/bge-m3 model\n",
     "2. **Batch processing benefits**: Demonstrated how batch embeddings provide significant performance improvements\n",
